--- a/src/components/footer/Footer.html
+++ b/src/components/footer/Footer.html
@@ -1,4 +1,4 @@
-<footer class="f-footer">
+<footer class="f-footer" id="contacto">
   <div class="f-menu">
     <div class="f-marca">
       <h2>Portafolio</h2>
