--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,8 +1,8 @@
 .h-header {
   width: 100vw;
   height: 10vh;
-  background-color: black;
-  color: white;
+  background-color: rgb(10, 10, 20);
+  position: fixed;
 }
 
 .h-menu {
@@ -18,11 +18,6 @@
   align-items: center;
 }
 
-.h-marca img {
-  width: 50px;
-  height: 50px;
-}
-
 .h-nav {
   display: flex;
   justify-content: space-between;
@@ -31,12 +26,19 @@
   height: 10vh;
 }
 
-.h-nav li {
-  padding: 15px;
+html {
+  scroll-behavior: smooth;
 }
 
-.h-nav li:hover {
+.h-nav a {
+  padding: 15px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.h-nav a:hover {
   background-color: white;
   color: black;
   cursor: pointer;
+  border-radius: 5px;
 }
