--- a/src/components/header/Header.html
+++ b/src/components/header/Header.html
@@ -5,12 +5,11 @@
     </div>
     <div>
       <ul class="h-nav">
-        <li>Inicio</li>
-        <li>Sobre mi</li>
-        <li>Tecnologias</li>
-        <li>Proyectos</li>
-        <li>Habilidades</li>
-        <li>Contacto</li>
+        <li><a href="#perfil">Perfil</a></li>
+        <li><a href="#tecnologias">Tecnologias</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
+        <li><a href="#contacto">Contacto</a></li>
       </ul>
     </div>
   </div>
