--- a/src/pages/portafolio/Portafolio.css
+++ b/src/pages/portafolio/Portafolio.css
@@ -1,15 +1,14 @@
 .s-contenido {
   width: 50vw;
   margin: auto;
-  border-left: 2px solid gray;
-  border-right: 2px solid gray;
+  background-color: rgb(0, 0, 0, 0.1);
 }
 
 .s-perfil {
   display: flex;
   justify-content: space-evenly;
-  padding-top: 22vh;
-  padding-bottom: 22vh;
+  align-items: center;
+  height: 100vh;
 }
 
 .s-imagen {
@@ -24,4 +23,50 @@
 
 .s-resumen {
   text-align: justify;
+}
+
+.s-tecnologias {
+  text-align: center;
+}
+
+.s-t-titulo {
+  padding: 30px;
+}
+
+.s-t-iconos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.s-t-iconos div {
+  width: 90px;
+  height: 90px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.s-t-iconos .spring {
+  width: 64px;
+  height: 64px;
+}
+
+.s-proyectos {
+  align-content: center;
+  text-align: center;
+  height: 100vh;
+}
+
+.s-p-titulo {
+  padding: 30px;
+}
+
+.s-p-proyectos {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.s-p-proyecto {
+  width: 20vw;
+  height: 40vh;
+  background-color: aquamarine;
 }
