--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,6 @@
 .f-footer {
   width: 100vw;
+  height: 30vh;
   background-color: rgb(10, 10, 20);
   color: white;
 }
@@ -8,4 +9,5 @@
   justify-content: space-between;
   width: 50vw;
   margin: auto;
+  padding: 30px;
 }
