--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,16 +1,14 @@
 .h-header {
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   background-color: rgb(10, 10, 20);
   position: fixed;
 }
 
 .h-menu {
-  width: 50vw;
-  height: 10vh;
+  width: 50%;
   display: flex;
   margin: auto;
-  justify-content: space-between;
 }
 
 .h-marca {
@@ -20,10 +18,10 @@
 
 .h-nav {
   display: flex;
-  justify-content: space-between;
   list-style: none;
   align-items: center;
   height: 10vh;
+  width: 90%;
 }
 
 html {
