--- a/src/components/header/Header.html
+++ b/src/components/header/Header.html
@@ -3,7 +3,7 @@
     <div class="h-marca">
       <h2>Portafolio</h2>
     </div>
-    <div>
+    <div class="h-ul">
       <ul class="h-nav">
         <li><a href="/#perfil">Perfil</a></li>
         <li><a href="/#tecnologias">Tecnologias</a></li>
