--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,42 +1,54 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 .h-header {
   width: 100%;
-  height: 10vh;
+  min-height: 10vh;
   background-color: rgb(0, 0, 0);
   position: fixed;
+  align-content: center;
 }
 
 .h-menu {
-  width: 50%;
   display: flex;
+  flex-wrap: wrap;
+  min-width: 400px;
+  max-width: 800px;
   margin: auto;
+  justify-content: space-around;
 }
 
 .h-marca {
-  display: flex;
-  align-items: center;
+  text-align: center;
+  width: 150px;
+  align-content: center;
+}
+
+.h-ul {
+  width: 600px;
 }
 
 .h-nav {
   display: flex;
   list-style: none;
-  align-items: center;
-  height: 10vh;
-  width: 90%;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
-.h-nav a {
+a {
   padding: 15px;
+  text-align: center;
   color: inherit;
   text-decoration: none;
 }
 
-.h-nav a:hover {
+a:hover {
   background-color: white;
   color: black;
   cursor: pointer;
   border-radius: 5px;
+}
+
+html {
+  scroll-behavior: smooth;
 }
