--- a/src/components/header/Header.html
+++ b/src/components/header/Header.html
@@ -5,11 +5,11 @@
     </div>
     <div class="h-ul">
       <ul class="h-nav">
-        <li><a href="/#perfil">Perfil</a></li>
-        <li><a href="/#tecnologias">Tecnologias</a></li>
-        <li><a href="/#proyectos">Proyectos</a></li>
-        <li><a href="/#habilidades">Habilidades</a></li>
-        <li><a href="/#contacto">Contacto</a></li>
+        <a href="/#perfil">Perfil</a>
+        <a href="/#tecnologias">Tecnologias</a>
+        <a href="/#proyectos">Proyectos</a>
+        <a href="/#habilidades">Habilidades</a>
+        <a href="/#contacto">Contacto</a>
       </ul>
     </div>
   </div>
