--- a/src/components/footer/Footer.html
+++ b/src/components/footer/Footer.html
@@ -1,13 +1,12 @@
 <footer class="f-footer" id="contacto">
   <div class="f-menu">
     <div class="f-marca">
-      <h2>Portafolio</h2>
+      <h2>Portafolio</h3>
     </div>
-    <div>
-      <h3>Terminos y condiciones</h3>
-    </div>
-    <div>
+    <div class="f-contacto">
       <h3>Contacto</h3>
+      <p>jejo.arch@gmail.com</p>
+      <p>+57 3148466202</p>
     </div>
   </div>
   <link rel="stylesheet" href="/src/components/footer/Footer.css" />
