--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,13 +1,24 @@
 .f-footer {
   width: 100%;
   height: 30vh;
-  background-color: rgb(10, 10, 20);
+  background-color: rgb(0, 0, 0);
   color: white;
 }
 .f-menu {
   display: flex;
   justify-content: space-between;
-  width: 50vw;
+  width: 50%;
   margin: auto;
   padding: 30px;
+}
+
+.f-marca {
+  text-align: center;
+}
+
+.f-contacto {
+  text-align: center;
+}
+.f-contacto p {
+  margin-top: 20px;
 }
