--- a/src/components/footer/Footer.html
+++ b/src/components/footer/Footer.html
@@ -6,7 +6,7 @@
     <div class="f-contacto">
       <h3>Contacto</h3>
       <p>jejo.arch@gmail.com</p>
-      <p>+57 3148466202</p>
+      <a href="https://wa.me/573148466202" target="_blank">+57 3148466202</a>
     </div>
   </div>
   <link rel="stylesheet" href="/src/components/footer/Footer.css" />
