--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,12 +1,13 @@
 .f-footer {
   width: 100%;
-  height: 30vh;
+  min-height: 30vh;
   background-color: rgb(0, 0, 0);
   color: white;
 }
 .f-menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
   width: 50%;
   margin: auto;
   padding: 30px;
@@ -14,9 +15,12 @@
 
 .f-marca {
   text-align: center;
+  width: 275px;
+  margin-bottom: 20px;
 }
 
 .f-contacto {
+  width: 275px;
   text-align: center;
 }
 .f-contacto p {
