--- a/src/pages/portafolio/Portafolio.css
+++ b/src/pages/portafolio/Portafolio.css
@@ -81,11 +81,18 @@ h3 {
 }
 
 .s-p-proyecto {
-  width: 20vw;
-  min-width: 300px;
+  width: 320px;
   padding: 15px;
   border-radius: 10px;
-  background-color: rgb(10, 10, 20);
+  background-color: rgb(0, 0, 15);
+}
+
+.s-p-img-full {
+  width: 100%;
+}
+
+.s-p-parrafo {
+  margin-top: 10px;
 }
 
 .s-habilidades {
@@ -98,6 +105,7 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin-top: 20px;
 }
 
 .s-h-frag {
